feat: Add update profile functionality
